--- a/TP 01 Calcule de l'IMC/index.html
+++ b/TP 01 Calcule de l'IMC/index.html
@@ -14,7 +14,7 @@
     <input id="Taille" type="number" step="0.01" placeholder="Taille en m." /><br><br>
     <button id="Calculer_input" onclick="calculerIMC()">Calculer</button><br><br>
     <section>
-        <p id="IMC_affichage">cdsdfsg</p><br>
+        <p id="IMC_affichage"></p>
         <p id="IMC_affichage1"></p>
     </section>
     <script>
