--- a/TP 01 Calcule de l'IMC/index.html
+++ b/TP 01 Calcule de l'IMC/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="script.css">
     <title>Calculateur d'IMC</title>
 </head>
+<header>
+    <img id="balance" src="5387.png_860.png" alt="bonjour">
+    <h1 class="titre">Calcul de l'IMC</h1>
+</header>
 <body>
     <h1>Calculer votre IMC</h1>
     <p>Poids en kg :</p>
@@ -14,7 +18,7 @@
     <input id="Taille" type="number" step="0.01" placeholder="Taille en m." /><br><br>
     <button id="Calculer_input" onclick="calculerIMC()">Calculer</button><br><br>
     <section>
-        <p id="IMC_affichage"></p>
+        <p id="IMC_affichage">IMC :</p>
         <p id="IMC_affichage1"></p>
     </section>
     <script>
@@ -43,5 +47,10 @@
             document.getElementById('IMC_affichage1').innerText = `${message}`;
         }
     </script>
+    <footer id="footer">
+        <p id="copy">
+            Copyright © Seven Valley 2024
+        </p>
+    </footer>
 </body>
 </html>
