--- a/TP 01 Calcule de l'IMC/index.html
+++ b/TP 01 Calcule de l'IMC/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="script.css">
+    <script rel="text/javascript" href="Test.js"></script>
     <title>Calculateur d'IMC</title>
 </head>
 <header>
